# mayassa

./: CONTRIBUTORS.md  README.md  diagram.dbml  logging.toml  manage.py  orm.md  pyproject.toml  run.py  settings.ini
account/helpers/: enums.py
account/models/: user.py
banner/admin/: banner.py
banner/migrations/: 0001_initial.py
banner/models/: banner.py
banner/tests/models/: test_banner.py
configs/: settings-template.ini
docs/db/: dbdirgram.dbml
howitwork/: apps.py
howitwork/admin/: howitwork.py
howitwork/migrations/: 0001_initial.py
howitwork/models/: __init__.py  howitwork.py
kernel/: urls.py
kernel/settings/: base.py  development.py  production.py
kernel/settings/services/: __init__.py  backend.py  database.py  localization.py  log_conf.py
painless/mixin_files/: mixins.py
painless/models/generator/: base.py
painless/models/mixin_files/: __init__.py  pictures.py  timestamp.py
painless/models/validators/: picture.py
product/admin/: __init__.py  category.py  product.py  tag.py
product/api/: urls.py
product/migrations/: 0001_initial.py  0002_alter_category_created_alter_product_alternate_text_and_more.py
product/models/: category.py  product.py  tag.py
socialmedia/admin/: socialmedia.py
socialmedia/api/: urls.py
socialmedia/migrations/: 0001_initial.py  0002_alter_socialmedia_created.py
socialmedia/models/: socialmedia.py
submitorder/: apps.py
submitorder/admin/: __init__.py  submitorder.py
submitorder/migrations/: 0001_initial.py
submitorder/models/: __init__.py  submitorder.py
(+27 files in other folders)
