[tool.poetry]
name = "elearning"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "private"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
python-decouple = "^3.7"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
